[package]
name = "scoped_tasks_prototype"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
license = "MIT"
authors = ["Olivier FAURE <couteaubleu@gmail.com>"]
description = "A quick-and-dirty attempt to get scoped tasks in Rust."
repository = "https://github.com/PoignardAzur/scoped_tasks_prototype"
categories = ["asynchronous", "concurrency"]
readme = "README.md"
keywords = ["async", "memory"]

[dev-dependencies]
futures = "0.3.28"
tokio = { version = "1.28.2", features = ["rt", "macros", "rt-multi-thread"] }
